add: working version of the task status
